--- a/k8s/confluence/config/config-db.yaml
+++ b/k8s/confluence/config/config-db.yaml
@@ -13,7 +13,7 @@ data:
   ATL_JDBC_URL: jdbc:postgresql://db-confluence-atlassian.ctt9hc3po2iq.ap-south-1.rds.amazonaws.com:5432/postgres
   ATL_JDBC_USER: master
   ATL_DB_DRIVER: org.postgresql.Driver
-  ATL_DB_TYPE: postgres72
+  ATL_DB_TYPE: postgresql
   ATL_DB_SCHEMA_NAME: public
   ATL_DB_POOLMINSIZE: "20"
   ATL_DB_POOLMAXSIZE: "20"
